--- a/Presentation/static/style.css
+++ b/Presentation/static/style.css
@@ -1,4 +1,65 @@
 table, th, td {
-    border: 1px solid black;
-    border-collapse: collapse;
-  }
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+body, html {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f0f8ff;
+}
+
+.container > * {
+  margin-bottom: 1.5rem;
+}
+
+h1 {
+  font-size: 5em;
+  color: #333;
+  text-align: center;
+  font-family: 'Merriweather', cursive;
+  margin: 0;
+}
+
+p {
+  font-size: 2em; 
+  color: #666;
+  text-align: center;
+  font-family: 'Sacramento', cursive;
+  margin-top: 1em;
+}
+
+.button {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-family: 'Merriweather', cursive;
+  color: #fff;
+  background-color: rgb(112, 112, 112);
+  border: none;
+  border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  margin: 10px;
+  margin-top: 2em;
+}
+
+.button:hover {
+  background-color: rgb(42, 42, 42);
+}
+
+.button-group {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 2em;
+}
+
+.button-wrapper {
+  text-align: center;
+}
