--- a/Presentation/views/prijava.html
+++ b/Presentation/views/prijava.html
@@ -1,15 +1,17 @@
 %rebase('osnova.html', naslov='Prijava', stran='prijava', uporabnik=None)
 
-<form action="{{url('/prijava')}}" method="POST" style="width:60%">
-    <div class="form-group">
-      <label for="username">Uporabniško ime</label>
-      <input type="input" class="form-control" name="username"  placeholder="Vnesi uporabniško ime">
+<form action="{{url('/prijava')}}" method="POST" class="w-100">
+
+    <div class="form-group mb-4">
+      <input type="email" class="form-control" name="username"  placeholder="Uporabniško ime">
     </div>
-    <div class="form-group">
-      <label for="password">Geslo</label>
+    <div class="form-group mb-2">
       <input type="password" class="form-control" name="password" placeholder="Geslo">
     </div>
 
-    <button type="submit" class="btn btn-primary">Prijava</button>
-  </form>
+    <div class="button-wrapper">
+      <button type="submit" class="button">Prijava</button>
+      <a href="{{url('/registracija')}}" class="button">Registracija novega uporabnika</a>
+    </div>
+</form>
 
