--- a/Presentation/views/osnova.html
+++ b/Presentation/views/osnova.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 
@@ -8,7 +9,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
   <!-- <link href="{{url('static', filename='style.css')}}" rel="stylesheet">     -->
-    <link href="{{url('static', filename='style.css')}}" rel="stylesheet">    
+    <link href="{{url('static', filename='style.css')}}" rel="stylesheet">
+    <meta charset="UTF-8">    
     <title style="text-align: center;">{{naslov}}</title>  
 </head>
 <body> 
