--- a/Presentation/views/dodaj_pevca.html
+++ b/Presentation/views/dodaj_pevca.html
@@ -3,7 +3,7 @@
 
 Dodajte podatke o pevcu!
 
-<form action="{{url('/dodaj_pevca')}}" method="POST" style="width:60%">
+<form action="{{url('/dodaj_pevca')}}" method="POST" accept-charset="UTF-8" style="width:60%">
  
     <div class="form-group">
         <label for="ime">Ime in priimek:</label>
