--- a/Presentation/views/index.html
+++ b/Presentation/views/index.html
@@ -1,4 +1,4 @@
-%rebase('osnova.html', naslov='Čudežni svet oper', stran='index', uporabnik=None) 
+%rebase('osnova.html', naslov='Čarobni svet oper', stran='index', uporabnik=None) 
 
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,7 @@
 
 
 <body>
-    <h1>Čudežni svet oper</h1>
+    <h1>Čarobni svet oper</h1>
     <p>Dobrodošli v čarobnem svetu oper.</p>
     
     <div class="button-group">
