--- a/Presentation/views/osnova.html
+++ b/Presentation/views/osnova.html
@@ -14,27 +14,26 @@
   <title style="text-align: center;">{{naslov}}</title>
 </head>
 
-
-<body> 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="navbar-nav">         
+<body>
+  <!-- 
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+        <span class="navbar-brand">Operne Predstave</span>
+        <div class="navbar-collapse collapse" id="navbarContent">
+            <ul class="navbar-nav ms-auto">
+                % if uporabnik:
+                <li class="nav-item">
+                    <span class="navbar-text me-2">Uporabnik: {{uporabnik}}</span>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url('odjava')}}">Odjava</a>
+                </li>
+                % end
+            </ul>
+        </div>
     </div>
-      <ul class="navbar-nav ml-auto">
-      </ul>
-      <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-        <ul class="navbar-nav ml-auto">
-            % if uporabnik:
-            <span class="navbar-text">
-               Uporabnik: {{uporabnik}}
-            </span>   
-            <li class="nav-link">
-              <a class="dropdown-item" href="{{url('odjava')}}">Odjava</a>
-          </li>
-          % end
-      </ul>
-  </div>
-</nav>
-<br>
+</nav> 
+-->
   <div class="container">   
     {{!base}}
   </div>
