--- a/Presentation/views/registracija.html
+++ b/Presentation/views/registracija.html
@@ -30,4 +30,15 @@
     <div class="button-wrapper">
       <button type="submit" class="button">Registriraj se</button>
     </div>
+
+
+    <div class="form-group mb-2">
+      <input list="operne-hise" name="hisa" placeholder="Vtipkaj operno hišo">
+      <datalist id="operne-hise">
+        % for hisa in operne_hise:
+          <option value="{{hisa}}">
+        % end
+      </datalist>
+    </div>
+
 </form>
