Popravek zadnjih malenkosti

--- a/Presentation/views/dodaj_opero.html
+++ b/Presentation/views/dodaj_opero.html
@@ -1,9 +1,6 @@
-%rebase('osnova.html', naslov='Dodaj predstavo', stran='dodaj_predstavo')
+%rebase('osnova.html', naslov='Dodaj opero', stran='dodaj_opero')
 
-
-Dodajte podatke o operi!
-
-<form action="{{url('/dodaj_opero')}}" method="POST" style="width:60%">
+<form action="{{url('/dodaj_opero')}}" method="POST" style="width:60%" accept-charset="UTF-8">
  
     <div class="form-group">
         <label for="naslov">Naslov:</label>
