--- a/Presentation/views/dodaj_pevca.html
+++ b/Presentation/views/dodaj_pevca.html
@@ -1,7 +1,4 @@
-%rebase('osnova.html', naslov='Dodaj predstavo', stran='dodaj_predstavo')
-
-
-Dodajte podatke o pevcu!
+%rebase('osnova.html', naslov='Dodaj pevca', stran='dodaj_pevca')
 
 <form action="{{url('/dodaj_pevca')}}" method="POST" accept-charset="UTF-8" style="width:60%">
  
